# aleen-aljohani.github.io

./: index.html
.github/workflows/: ci.yml
smart-home-honeynet/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
smart-home-honeynet/config/: detection_rules.yaml
smart-home-honeynet/config/elasticsearch/: honeynet-events-template.json
smart-home-honeynet/config/kibana/: honeynet-dashboards.ndjson
smart-home-honeynet/config/logstash/pipeline/: honeynet.conf
smart-home-honeynet/config/suricata/: smarthome.rules
smart-home-honeynet/docs/: LINKEDIN.md  architecture.md  deployment.md  runbook.md  threat-model.md
smart-home-honeynet/docs/report/: SmartHoneyNet-IEEE.docx  SmartHoneyNet-IEEE.html  graduation-report.md  sample-demo-report.md
smart-home-honeynet/scripts/: build_ieee_docx.py  build_ieee_html.py  evaluate.py
smart-home-honeynet/src/honeynet/: __init__.py  cli.py  config.py  database.py  demo.py  mitre.py  models.py  pipeline.py  service.py
smart-home-honeynet/src/honeynet/analysis/: __init__.py  analyzer.py  report.py
smart-home-honeynet/src/honeynet/attacks/: __init__.py  brute_force.py  dos.py  port_scan.py  safety.py
smart-home-honeynet/src/honeynet/detection/: __init__.py  engine.py
smart-home-honeynet/tests/: conftest.py  test_attacks_safety.py  test_cli.py  test_detection_engine.py  test_evaluation.py  test_honeypots.py  test_integration_demo.py  test_models_and_database.py  test_pipeline_and_analysis.py
(+4 files in other folders)
