[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-home-honeynet"
version = "2.0.0"
description = "Hunt, detect and analyse attacks on smart-home networks using honeypots, an IDS and the ELK stack."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Aleen Saleh Aljohani", email = "aleensaljohani@gmail.com" },
]
keywords = ["honeypot", "ids", "elk", "iot", "smart-home", "cybersecurity", "threat-hunting"]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "PyYAML>=6.0"]

[project.scripts]
honeynet = "honeynet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["honeynet"]
